syntax = "proto3";
package data_plane;

option go_package = "github.com/eth-easl/cluster_manager/api/proto";

import "common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

message NodeInfo {
  string NodeID = 1;
  string IP = 2;
  int32 Port = 3;
  int32 CpuCores = 4;
  uint64 MemorySize = 5;
}

message NodeHeartbeatMessage {
  string NodeID = 1;
  int32 CpuUsage = 2;
  int32 MemoryUsage = 3;
}

message AutoscalingMetric {
  string ServiceName = 1;
  float Metric = 2;
}

message DataplaneInfo {
  int32 APIPort = 1;
  int32 ProxyPort = 2;
}

service CpiInterface {
  rpc OnMetricsReceive(AutoscalingMetric) returns (ActionStatus);
  rpc ListServices(google.protobuf.Empty) returns (ServiceList);

  rpc RegisterDataplane(DataplaneInfo) returns (ActionStatus);
  rpc RegisterService(ServiceInfo) returns (ActionStatus);
  rpc RegisterNode(NodeInfo) returns (ActionStatus);
  rpc NodeHeartbeat(NodeHeartbeatMessage) returns (ActionStatus);

  rpc DeregisterDataplane(DataplaneInfo) returns (ActionStatus);
  rpc DeregisterNode(NodeInfo) returns (ActionStatus);

  rpc ResetMeasurements(google.protobuf.Empty) returns (ActionStatus);
}

message SandboxID {
  string ID = 1;
  int32 HostPort = 2;
}

message SandboxCreationStatus {
  bool Success = 1;
  string ID = 2;
  PortMapping PortMappings = 3;
  SandboxCreationBreakdown LatencyBreakdown = 5;
}

message SandboxCreationBreakdown {
  google.protobuf.Duration Total = 1;
  google.protobuf.Duration ImageFetch = 2;
  google.protobuf.Duration ContainerCreate = 3;
  google.protobuf.Duration CNI = 4;
  google.protobuf.Duration ContainerStart = 5;
  google.protobuf.Duration Iptables = 6;
  google.protobuf.Duration Database = 7;
  google.protobuf.Duration DataplanePropagation = 8;
}

service WorkerNodeInterface {
  rpc CreateSandbox(ServiceInfo) returns (SandboxCreationStatus);
  rpc DeleteSandbox(SandboxID) returns (ActionStatus);
}